--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>LATEIN</h1>
+  <main>
+    <button class="card" id="top-card">
+      <div id="term">test</div>
+      <div id="addition">test 2</div>
+      <div id="definition">definition</div>
+    </button>
+  </main>
+
   <script src="main.js"></script>
 </body>
 </html>
