--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>latein</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <main>
-    <button class="card" id="top-card">
-      <div id="term">test</div>
-      <div id="addition">test 2</div>
-      <div id="definition">definition</div>
-    </button>
-  </main>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>latein</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div id="cards">
+        <button class="card" id="top-card">
+          <div id="term">test</div>
+          <div id="addition">test 2</div>
+          <div id="definition">definition</div>
+        </button>
+      </div>
+      <div id="buttons">
+        <button id="decline">✗</button>
+        <button id="accept">✓</button>
+      </div>
+    </main>
 
-  <script src="main.js"></script>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
