change ids to classes

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   </head>
   <body>
     <main>
-      <div id="cards">
-        <button class="card" id="top-card">
-          <div id="term">test</div>
-          <div id="addition">test 2</div>
-          <div id="definition">definition</div>
+      <div class="cards">
+        <button class="card top-card">
+          <div class="term">test</div>
+          <div class="addition">test 2</div>
+          <div class="definition">definition</div>
         </button>
       </div>
-      <div id="buttons">
-        <button id="decline">✗</button>
-        <button id="accept">✓</button>
+      <div class="buttons">
+        <button class="decline">✗</button>
+        <button class="accept">✓</button>
       </div>
     </main>
 
