--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       </div>
     </main>
 
+    <script type="text/javascript" src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script> -->
     <script src="main.js"></script>
   </body>
 </html>
